fix: added z-index to enable acces to admin buttons

--- a/src/app/templates/pages/projects/projects.component.css
+++ b/src/app/templates/pages/projects/projects.component.css
@@ -356,6 +356,7 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 3;
 }
 
 .project-card:hover .admin-buttons {
